# anchor-testing-suite

./: Anchor.toml  README.md
.github/workflows/: anchor-suite-ci.yml
programs/anchor-testing-suite/: Cargo.toml
programs/anchor-testing-suite/src/: lib.rs
programs/anchor-testing-suite/tests/: litesvm_test.rs
submission-evidence/: local-report.json
tests/: anchor-testing-suite.ts
